# system-monitoring

./: .versionrc  Cargo.toml  build.rs
.github/workflows/: rust.yml
proto/: communication.proto
src/: build.rs  client.rs  communication.proto  main.rs  metrics.rs  server.rs  socket.rs  types.rs
src/grpc/: client.rs  server.rs  types.rs
