[package]
name = "system-monitoring"
description = "System monitoring tool"
authors = ["Taha"]
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32.1"
extended-isolation-forest = "0.2.3"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3"
tokio-stream = "0.1.14"
uuid = "1.11.0"



